--- a/index.html
+++ b/index.html
@@ -1,126 +1,56 @@
 <html>
 <head>
-	<title>Testing Web Storage</title>
+	<title>Local Storage Demo</title>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-	<script>
-		jQuery(function()
-		{
-			displayName();
-			$("#editform").hide();
-		});
-
-		function saveName()
-		{
-			var fname = $("#fname").val();
-			var lname = $("#lname").val();
-
-			var record = {
-				fname: fname,
-				lname: lname,
-			};
-
-			var idCountStr = localStorage.getItem("idCount");
-			if (idCountStr) {
-				var idCountInt = parseInt(idCountStr) + 1;
-			} else {
-				var idCountInt = 0;
-			}
-
-			localStorage.setItem(idCountInt.toString(), JSON.stringify(record));
-			localStorage.setItem("idCount", idCountInt);
-
-
-			displayName();
-		};
-
-		function resetStorage()
-		{
-			localStorage.clear();
-			displayName();
-		};
-
-
-		function displayName()
-		{
-			var $list = $("ul");
-			$list.empty();
-			for (var i = 0; i < localStorage.length; i++) {
-				var keyName = localStorage.key(i);
-				if (keyName != 'idCount') {
-					var value = localStorage.getItem(keyName);
-					var nameOb = JSON.parse(value);
-					$("<li data-id=" + keyName + ">" + nameOb.fname + " " + nameOb.lname + "</li>").appendTo($list);
-				}
-			}
-
-			displayDelButton();
-		};
-
-		function displayDelButton()
-		{
-			$("li").each(function(){
-				var $id = $(this).data('id')
-				$(this).append($("<button onclick='editName(" + $id + ");'>edit</button>"))
-						.append($("<button onclick='deleteName(" + $id + ");'>delete</button>"));
-			});
-		}
-
-		function deleteName(id)
-		{
-			localStorage.removeItem(id);
-			displayName();
-		};
-
-		function editName(id)
-		{
-			$("#editform").show();
-			var record = localStorage.getItem(id);
-			var nameOb = JSON.parse(record);
-			$("#fname_edit").val(nameOb.fname);
-			$("#lname_edit").val(nameOb.lname);
-
-			$("form[name='recordedit']").on('click', 'BUTTON', function(){
-				var $fname_new = $("#fname_edit").val();
-				var $lname_new = $("#lname_edit").val();
-
-				var record = {
-				fname: $fname_new,
-				lname: $lname_new,
-				};
-				localStorage.setItem(id, JSON.stringify(record));
-			});
-		};
-
-
-	</script>
+	<script type="text/javascript" src="js/Record.js"></script>
+	<script type="text/javascript" src="js/Index.js"></script>
+	<script type="text/javascript" src="js/Data.js"></script>
 </head>
 <body>
-	<h1>Testing Web Storage</h1>
-	<h2>Enter name:</h2>
-	<form name="recordinput">
-		<label for="fname">First Name: </label>
-		<input type="text" id="fname"><br>
-		<label for="lname">Last Name: </label>
-		<input type="text" id="lname"><br>
-		<input name="save" type="button" value="Save" onclick="saveName();">
-	</form>
-
-
-	<h2>Saved names</h2>
+	<h1>Local Storage Demo</h1>
+	<h3>Create a record:</h3>
 	<ul>
+		<li>var d = new Data();</li>
+		<li>var fname = "Joe", lname = "Schmoe";</li>
+		<li>var r = d.createRecord(fname, lname);</li>
+		<li>This creates a new record, increments sequence and hashes it to create the id, and writes the record to localStorage</li>
+		<li>If the new record is the first one, this will also create 'sequence' and 'recordIndex' in localStorage</li>
+		<li>r.id: see the id of the newly created record</li>
+		<li>r.fname: see first name</li>
+		<li>r.lname: see last name</li>
 	</ul>
 
-	<div id="editform">
-		<h2>Edit name:</h2>
-		<form name="recordedit">
-			<label for="fname">First Name: </label>
-			<input type="text" id="fname_edit"><br>
-			<label for="lname">Last Name: </label>
-			<input type="text" id="lname_edit"><br>
-			<button>save edit</button>
-		</form>
-	</div>
+	<h3>Load a record with id:</h3>
+	<ul>
+		<li>var d = new Data();</li>
+		<li>var r = d.readRecord(id);</li>
+		<li>This retrieves the record from localStorage</li>
+	</ul>
 
-	<button onclick="resetStorage();">Reset</button>
+	<h3>Update a record:</h3>
+	<ul>
+		<li>var d = new Data();</li>
+		<li>var r = d.updateRecord(id, fname_new, lname_new);</li>
+		<li>This first loads the record from localStorage, then writes the new data</li>
+	</ul>
+
+	<h3>Delete a record:</h3>
+	<ul>
+		<li>var d = new Data();</li>
+		<li>var r = d.deleteRecord(id);</li>
+		<li>This deletes the record from localStorage and returns the deleted record</li>
+	</ul>
+
+	<h3>Load all records:</h3>
+	<ul>
+		<li>var d = new Data();</li>
+		<li>d.readAll();</li>
+	</ul>
+
+	<h3>Delete all records:</h3>
+	<ul>
+		<li>var d = new Data();</li>
+		<li>d.clear();</li>
+	</ul>
 </body>
 </html>
